--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,16 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registry</title>
+  <title></title>
   <link rel="stylesheet" href="/css/jass.css">
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      User Registry
-    </h1>
-    
+  <header class="display-flex justify-space-between align-center p-2"> 
     {{#if logged_in}} 
     {{!-- If logged in, displays logout button in the nav bar for user to click --}}
     <nav>
