--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,22 @@
-<h2>Login</h2>
+<header>
+  {{!-- <img src="./assets/images/Winning_Edge.png"/> --}}
+</header>
 
-<form class="form login-form">
-  <div class="form-group">
-    <label for="email-login">email:</label>
-    <input class="form-input" type="text" id="email-login" />
-  </div>
-  <div class="form-group">
-    <label for="password-login">password:</label>
-    <input class="form-input" type="password" id="password-login" />
-  </div>
-  <div class="form-group">
-    <button class="btn btn-primary" type="submit">login</button>
-  </div>
-</form>
+<div style="background: rgb(48, 45, 45)">
+  <h2 style="text-align: center; color:white; font-weight:600; padding-top: 20px">Please Login to View Games</h2>
+  <form style="padding: 15px" class="form login-form">
+    <div class="form-group">
+      <label style=" color:limegreen" for="email-login">Username:</label>
+      <input class="form-input" type="text" id="email-login" />
+    </div>
+    <div class="form-group">
+      <label style=" color:limegreen" for="password-login">Password:</label>
+      <input class="form-input" type="password" id="password-login" />
+    </div>
+    <div class="form-group">
+     <button class="btn btn-primary" type="submit">login</button>
+    </div>
+  </form>
+</div>
 
 <script src="/js/login.js"></script>
