moved assets/images into public file path for static files  and added logo to homepage handlebars page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2"> 
+  <header class="display-flex justify-space-between align-center p-2">
+    <img src="./images/logo.png">
     {{#if logged_in}} 
     {{!-- If logged in, displays logout button in the nav bar for user to click --}}
     <nav>
