--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,9 @@
-<header>
-  {{!-- <img src="./assets/images/Winning_Edge.png"/> --}}
-</header>
 
 <div style="background: rgb(48, 45, 45)">
   <h2 style="text-align: center; color:white; font-weight:600; padding-top: 20px">Please Login to View Games</h2>
   <form style="padding: 15px" class="form login-form">
     <div class="form-group">
-      <label style=" color:limegreen" for="email-login">Username:</label>
+      <label style=" color:limegreen" for="email-login">Email:</label>
       <input class="form-input" type="text" id="email-login" />
     </div>
     <div class="form-group">
