--- a/views/layouts/landingpage.handlebars
+++ b/views/layouts/landingpage.handlebars
@@ -1,7 +1,7 @@
 {{#each game as |game| }}
 <div class="row align-center mb-5">
   <div class="col-md-6">
-    <button>{{{game.commence_time}}} {{game.home_team}} {{game.away_team}} </button>
+    <button data-id ={{game.id}}>{{{game.commence_time}}} {{game.home_team}} {{game.away_team}} </button>
   </div>
 </div>
 {{/each}}
