--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,10 @@
-{{#each users as |user| }}
-<div class="row align-center mb-5">
-  <div class="col-md-6">
-    <h2>{{{get_emoji}}} {{user.name}}</h2>
-  </div>
-  <div class="col-md-6">
-    <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
-  </div>
-</div>
-{{/each}}
+ <div class="hero"> </div>
+    <div class="btn">
+        <button class="login-btn"> Login</button>
+        <button class="signup-btn"> Sign-up</button>
+    </div>
+    <div class="loggedin">
+        <button class="past-btn"> Past</button>
+        <button class="upcoming-btn"> Upcoming</button>
+    </div>
+    
