--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -192,6 +192,7 @@ button,
 [type='reset'],
 [type='submit'] {
   -webkit-appearance: button;
+  appearance: none;
 }
 
 /**
@@ -286,6 +287,7 @@ textarea {
   /* 1 */
   outline-offset: -2px;
   /* 2 */
+  appearance: none;
 }
 
 /**
@@ -1127,6 +1129,7 @@ form .form-textarea {
 form select {
   -webkit-appearance: none;
   -moz-appearance: none;
+  appearance: none;
   background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
   background-repeat: no-repeat;
   background-position-x: 98%;
