--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,17 @@
- <div class="hero"> </div>
+ <div class="hero"> 
     <div class="btn">
-        <button class="login-btn"> Login</button>
-        <button class="signup-btn"> Sign-up</button>
+        <a href="/login">
+            <button class="login-btn"> Login</button>
+        </a>
+        <a href="/signup">
+            <button class="signup-btn"> Sign-up</button>
+        
+        </a>
     </div>
     <div class="loggedin">
         <button class="past-btn"> Past</button>
         <button class="upcoming-btn"> Upcoming</button>
     </div>
+ </div>
     
+<script src="/js/homepage.js"></script>
