--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
-    <link rel="stylesheet" href="public/css/stylesheet.css" />
+    <title>Winning Edge</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/jass.css"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
@@ -12,7 +13,7 @@
 
   <body>
     <div class="header">
-      <img src="public/images/logo.png" alt="group logo" />
+      <img src="/images/logo.png" alt="group logo" />
       {{#if logged_in}}
         {{! If logged in, displays logout button in the nav bar for user to click }}
         <nav>
