--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,17 +1,23 @@
- <div class="hero"> 
-    <div class="btn">
+<div class="hero"></div>
+
+<div class="welcome">
+        
         <a href="/login">
             <button class="login-btn"> Login</button>
         </a>
         <a href="/signup">
             <button class="signup-btn"> Sign-up</button>
         
+        </a> 
+</div> 
+<div class="loggedin">
+    <a href="/singlegame">
+            <button class="past-btn"> Past</button>
         </a>
-    </div>
-    <div class="loggedin">
-        <button class="past-btn"> Past</button>
-        <button class="upcoming-btn"> Upcoming</button>
-    </div>
- </div>
     
+        <a href="/singlegame">
+            <button class="upcoming-btn"> Upcoming</button>
+        </a> 
+</div>  
+
 <script src="/js/homepage.js"></script>
