added singlegame handlebars to handle comment form and pull data from api to associate to the game id and update single.js to handle the functionality of the comment button, also updated script src in some of the js files to reflect the right location, added landingpage.js to handle event of selected game

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 
   <body>
     <div class="header">
-      <img src="/images/logo.png" alt="group logo" />
+      <img src="../../public/images/logo.png" alt="group logo" />
       {{#if logged_in}}
         {{! If logged in, displays logout button in the nav bar for user to click }}
         <nav>
@@ -31,7 +31,7 @@
 
     {{#if logged_in}}
       {{! Imports the logout js file to allow the user to log out if they're logged in, makes the button work}}
-      <script src="/js/logout.js"></script>
+      <script src="../../public/js/logout.js"></script>
     {{/if}}
   </body>
 
