updated homepage.js and updated file paths in handlebars to connect js files to event click listener

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,9 +11,9 @@
         </a> 
 </div> 
 <div class="loggedin">
-    <a href="/singlegame">
+    {{!-- <a href="/singlegame">
             <button class="past-btn"> Past</button>
-        </a>
+        </a> --}} 
     
         <a href="/singlegame">
             <button class="upcoming-btn"> Upcoming</button>
