fixed issue of webpage logo not rendering

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 
   <body>
     <div class="header">
-      <img src="../../public/images/logo.png" alt="group logo" />
+      <img src="/images/logo.png" alt="group logo" />
       {{#if logged_in}}
         {{! If logged in, displays logout button in the nav bar for user to click }}
         <nav>
