--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,9 @@
-<div class="hero"></div>
+<div class="hero">
+    <div class="hero-text">
+        <h1>Unlock Your Winning Potential: Bet Smart, Win Big, Daily</h1>
+        <p>All for Free-Welcome to the Community</p>
+    </div>
+</div>
 
 <div class="welcome">
         
