--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,5 @@
-/* @media (min-width: 576px) { ... }
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
 
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
-
-// X-Large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
-
-// XX-Large devices (larger desktops, 1400px and up)
-@media (min-width: 1400px) { ... } */
 
 body {
    background-color: limegreen; 
@@ -20,7 +9,11 @@ body {
    justify-content: center;
    margin-top: 100px;
    height: 250px;
+  
 
+}
+.img {
+ background-size:auto;
 }
 
 .hero {
@@ -38,12 +31,15 @@ body {
     margin-bottom: 50px;
 }
 
-.hero h1 {
-    font-size: 3em;
+.hero-text h1 {
+    font-size: 2.5em;
     margin-bottom: 0.5em;
+    color: azure;
+    opacity: 0.7;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.hero p {
+.hero-text p {
     font-size: 1.5em;
     margin-bottom: 1em;
 }
@@ -95,5 +91,12 @@ body {
     height: 4rem;
     width: 12rem; 
     font-size: 20px; 
+}
+
+.form-group{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
 }
     
