--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -1,5 +1,5 @@
 
-{{#each game as |game| }} <!-- Iterate over each 'game' in the 'game' array -->
+{{#each upcomingGames as |game| }} <!-- Iterate over each 'game' in the 'game' array -->
 <div class="row align-center mb-5">
   <div class="col-md-6">
     <!-- Render a button for each game -->
