--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,9 +20,9 @@
             <button class="past-btn"> Past</button>
         </a> --}} 
     
-        <a>
+        <a href="/api/games/upcoming">
             <button class="upcoming-btn"> Upcoming</button>
         </a> 
 </div>  
 
-<script src="../public/js/homepage.js"></script>
+<script src="/js/homepage.js"></script>
