--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -3,12 +3,12 @@
 <div class="row align-center mb-5">
   <div class="col-md-6">
     <!-- Render a button for each game -->
-    <button data-id={{game.id}}>{{{game.commence_time}}} {{game.home_team}} vs {{game.away_team}} </button>
+    <button data-id={{game.id}} class="game-button">{{{game.commence_time}}} {{game.home_team}} vs {{game.away_team}} </button>
     <!-- Display the commencement time, home team, and away team for the game -->
   </div>
 </div>
 {{/each}} 
 
 <!-- Include a JavaScript file for handling events related to this template -->
-<script src="../public/js/landingpage.js"></script>
+<script src="/js/landingpage.js"></script>
 
