--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,7 +12,10 @@
 
   <body>
     <div class="header">
-      <img src="/images/logo.png" class="img-fluid" alt="group logo" />
+      <a href="/">
+        <img src="/images/logo.png" class="img-fluid" alt="group logo" />
+      </a>
+      
       {{#if logged_in}}
         {{! If logged in, displays logout button in the nav bar for user to click }}
         <nav>
