--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,16 @@
 
   <body>
     <div class="header">
-      <img src="/images/logo.png" class="img-fluid" alt="group logo" />
+      <div class="text-center">
+        <div class="row justify-content-center">
+          <div class="col-sm-6 col-md-7 col-lg-12">
+            <img src="/images/logo.png"  alt="group logo" />
+          </div>  
+        </div>
+      
+      </div>
+      
+      
       {{#if logged_in}}
         {{! If logged in, displays logout button in the nav bar for user to click }}
         <nav>
@@ -26,7 +35,12 @@
       {{{body}}}
     </main>
     <footer>
+        <div>
+          <ul>
+             <p>contact</p>
 
+          </ul>
+        </div>
     </footer>
 
     {{#if logged_in}}
