--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -16,8 +16,10 @@
     </div>
     <div class="form-group">
      <button class="btn btn-primary" type="submit">Submit</button>
+     <button class="btn btn-primary" type="login">Login</button>
+     <button class="btn btn-primary" type="cancel">Cancel</button>
     </div>
   </form>
 </div>
 
-<script src="../public/js/signup.js"></script>
+<script src="/js/signup.js"></script>
