--- a/views/upcoming.handlebars
+++ b/views/upcoming.handlebars
@@ -10,5 +10,5 @@
 {{/each}} 
 
 <!-- Include a JavaScript file for handling events related to this template -->
-<script src="../public/js/landingpage.js"></script>
+<script src="/js/upcoming.js"></script>
 
