signup functions and routes working now

--- a/views/singlegame.handlebars
+++ b/views/singlegame.handlebars
@@ -73,4 +73,4 @@
 {{/each}}
 
 <!-- Include a JavaScript file for handling events related to this template -->
-<script src="../public/js/singlegame.js"></script>
+<script src="/js/singlegame.js"></script>
