logging in routes and session variables all work now

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
 
     {{#if logged_in}}
       {{! Imports the logout js file to allow the user to log out if they're logged in, makes the button work}}
-      <script src="../../public/js/logout.js"></script>
+      <script src="/js/logout.js"></script>
     {{/if}}
   </body>
 
