--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .hero {
-    background-image: url('/images/landing page image.jpg');
+    background-image: url('/images/landingpageimage1.jpg');
     background-size: cover;
     background-position: center;
     height: 75vh; 
@@ -95,6 +95,7 @@ body {
 }
 
 .footer {
-    display: inline-block;
-    margin-top: 20%;
+    display:block;
+    
+   
 }
