--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,32 +1,35 @@
-<div class="">
+<div class="text-center">
     <div class="hero">
         <div class="hero-text">
             <h1>Unlock Your Winning Potential: Bet Smart, Win Big, Daily</h1>
             <p>All for Free-Welcome to the Community</p>
         </div>
     </div>
-
 </div>
 
-
 <div class="welcome">
-        
-        <a href="/login">
+  <div class="container text-center">
+        <div class="row justify-content-start">
+        <div class="col-6">
+            <a href="/login">
             <button class="login-btn"> Login</button>
-        </a>
-        <a href="/signup">
+            </a>
+        </div>
+        <div class="col-6">
+            <a href="/signup">
             <button class="signup-btn"> Sign-up</button>
-        
-        </a> 
-</div> 
-<div class="loggedin">
-    {{!-- <a href="/singlegame">
-            <button class="past-btn"> Past</button>
-        </a> --}} 
-    
-        <a href="/singlegame">
+            </a>
+        </div>
+        </div>
+
+        <div class="row justify-content-center">
+        <div class="col-12">
+            <a href="/singlegame">
             <button class="upcoming-btn"> Upcoming</button>
-        </a> 
-</div>  
+            </a>
+        </div>
+    </div>
+
+</div>
 
 <script src="/js/homepage.js"></script>
