--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -1260,6 +1260,22 @@ form [type='radio'] {
   margin-right: -15px;
 }
 
+.rowupcomingpage {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.list-items-container {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 [class*='col-'] {
   position: relative;
   width: 100%;
