--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,3 +98,62 @@ body {
 
 }
     
+
+
+/* Singles Game Page */
+
+
+.list-items-container {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+
+.list {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.singles-game-container {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.outcome-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: white;
+    background-color: #100000;
+    color: #f5f4f5;
+    border-radius: 14px;
+    border: beige;
+}
+
+.teams-info-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e3e3e3;
+    color: black;
+    border: floralwhite;
+    border-radius: 13px;
+    height: 97px;
+    text-decoration: underline;
+    margin-bottom: 13px;
+}
+
+.font-dec {
+    font-size: 25px;
+    text-decoration: underline;
+}
