added login/logout nav bars to main.handlebars to view on all pages

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -932,7 +932,8 @@ a:hover {
 }
 
 .bg-light {
-  background-color: #d9e9e8 !important;
+    text-align: right;
+    background-color: limegreen !important;
 }
 
 .bg-dark {
