--- a/views/singlegame.handlebars
+++ b/views/singlegame.handlebars
@@ -1,5 +1,4 @@
 
-
 <div class = "singles-game-container">
 <!-- Display the matchup between home team and away team -->
 <div class = "teams-info-container">
@@ -9,9 +8,6 @@
 {{!-- Date of game --}}
 
 <!-- Display odds for the game if available -->
-
-
-  
 
 {{#if odds}}
     <!-- Display each of the odds, including which team each line pertains to -->
@@ -34,7 +30,7 @@
             {{/when}}
             <div class ="outcome-container">
                 {{#each outcomes}}
-                  <li class="list">{{name}} - {{price}}  {{#if point}} (Point: {{point}}) {{/if}} </li>
+                  <div class="list">{{name}} - {{price}}  {{#if point}} (Point: {{point}}) {{/if}} </div>
                 {{/each}}
             </div>
           </div>
