--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,14 @@
   </head>
 
   <body>
+    {{!-- navbar --}}
+    
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="/login">Login</a>
+  <a class="navbar-brand" href="#">Logout</a>
+</nav>
+    {{!--  --}}
+
     <div class="header">
       <a href="/">
         <img src="/images/logo.png" class="img-fluid" alt="group logo" />
