added event click listener for the logout link on the navbar to the logout js so it utilizes the same script, also removed block of code on the main handle bars for the logout button to display when USER is logged in as it was displaying to the right of the image. will just utilize logout href on the nav bar to logout USER. adjusted height of header css 7 to changed code to margin-bottom so it doesn't extend the button click area under the logo image and just contained in the image itself.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
     
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="/login">Login</a>
-  <a class="navbar-brand" href="#">Logout</a>
+  <a class="navbar-brand" id="logout-link" href="#">Logout</a>
 </nav>
     {{!--  --}}
 
@@ -25,12 +25,12 @@
         <img src="/images/logo.png" class="img-fluid" alt="group logo" />
       </a>
       
-      {{#if logged_in}}
+      {{!-- {{#if logged_in}}
         {{! If logged in, displays logout button in the nav bar for user to click }}
         <nav>
           <button class="btn" id="logout">logout</button>
         </nav>
-      {{/if}}
+      {{/if}} --}}
     </div>
 
     <main class="container container-fluid mt-5">
@@ -46,7 +46,7 @@
     {{/if}}
 
 
-    
+
   </body>
 
 </html>
