--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,14 +4,14 @@
 body {
    background-color: limegreen; 
 }
-.header {
-   display:flex;
-   justify-content: center;
-   margin-top: 100px;
-   height: 250px;
-  
 
+.header {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 150px;
 }
+
 .img {
  background-size:auto;
 }
