added smaller image

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .hero {
-    background-image: url('/images/landing page image.jpg');
+    background-image: url('/images/landingpageimage1.jpg');
     background-size: cover;
     background-position: center;
     height: 75vh; 
