--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,7 @@ body {
 .welcome {
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 75px;
 }
 .login-btn {
     background: rgb(35, 34, 34);
@@ -65,6 +66,7 @@ body {
     display:flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 60px;
 }
 
 /* .past-btn {
