added public to the filepath in the upcoming handlebars file

--- a/views/upcoming.handlebars
+++ b/views/upcoming.handlebars
@@ -10,5 +10,5 @@
 {{/each}} 
 
 <!-- Include a JavaScript file for handling events related to this template -->
-<script src="/js/upcoming.js"></script>
+<script src="public/js/upcoming.js"></script>
 
