--- a/views/upcoming.handlebars
+++ b/views/upcoming.handlebars
@@ -1,14 +1,14 @@
 
-{{#each game as |game| }} <!-- Iterate over each 'game' in the 'game' array -->
+{{#each upcomingGames as |game| }} <!-- Iterate over each 'game' in the 'game' array -->
 <div class="row align-center mb-5">
   <div class="col-md-6">
     <!-- Render a button for each game -->
-    <button data-id={{game.id}}>{{{game.commence_time}}} {{game.home_team}} vs {{game.away_team}} </button>
+    <button class="game-button" data-id={{game.id}}>{{{game.commence_time}}} {{game.home_team}} vs {{game.away_team}} </button>
     <!-- Display the commencement time, home team, and away team for the game -->
   </div>
 </div>
 {{/each}} 
 
 <!-- Include a JavaScript file for handling events related to this template -->
-<script src="public/js/upcoming.js"></script>
+<script src="/js/upcoming.js"></script>
 
