--- a/views/singlegame.handlebars
+++ b/views/singlegame.handlebars
@@ -66,7 +66,10 @@
               data-id="{{this.id}}"
               data-user="{{this.user_id}}"
               >Delete</button>
-            {{!-- <button href='/api/odds/{{this.game_id}}/comments/{{this.id}}'>Edit</button> --}}
+              <button id="edit-button" 
+              data-id="{{this.id}}"
+              data-user="{{this.user_id}}"
+              >Edit</button>
           {{/if}}
           
       </div>
