--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,3 +149,13 @@ body {
     font-size: 25px;
     text-decoration: underline;
 }
+
+/* upcoming games */
+
+#upcoming-games-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
