--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,9 +37,11 @@
     <main class="container container-fluid mt-5">
       {{{body}}}
     </main>
-    <footer>
+  
 
-    </footer>
+
+
+    
 
     {{#if logged_in}}
       {{! Imports the logout js file to allow the user to log out if they're logged in, makes the button work}}
@@ -47,6 +49,18 @@
     {{/if}}
 
 
+<footer class="bg-body-tertiary text-center">
+  <!-- Grid container -->
+  <div class="container p-4"></div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: limegreen">
+    © 2024 Copyright:
+    <a class="text-body" href="http://localhost:3001/">Winning-Edge</a>
+  </div>
+  <!-- Copyright -->
+</footer>
 
   </body>
 
