fixed nav bar, centered and changed bg color to black

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,4 +211,6 @@ footer {
     color: #f5f4f5;
     height: 100px;
     margin-top: auto;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
 }
